--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="profile-info">
                     <h1>陆毓泉</h1>
                     <div class="contact-info">
-                        <p><i class="fas fa-envelope"></i> your.email@example.com</p>
+                        <p><i class="fas fa-envelope"></i> yuquanlu01@gmail.com</p>
                         <div class="social-links">
                             <a href="#" target="_blank"><i class="fab fa-google"></i> Google Scholar</a>
                             <a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a>
