个人学术主页

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="publications-wrapper">
                     <div class="coming-soon">
                         <i class="fas fa-hourglass-half"></i>
-                        <p>论文即将发表，敬请期待！</p>
+                        <p>敬请期待！</p>
                         <p class="coming-soon-subtitle">研究工作正在进行中...</p>
                     </div>
                 </div>
