--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <body>
     <!-- Profile section -->
     <div class="profile">
-        <img src="Profile.jpg" alt="Yuquan Lu" class="profile-image">
+        <img src="profile.jpg" alt="Yuquan Lu" class="profile-image">
         <div class="profile-info">
             <h1>Yuquan Lu(陆毓泉)</h1>
             <p>Pending Enrollment Master's Student</p>
