--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <img src="profile.jpg" alt="Yuquan Lu" class="profile-image">
         <div class="profile-info">
             <h1>Yuquan Lu(陆毓泉)</h1>
-            <p>Pending Enrollment Master's Student</p>
-            <p>Shenzhen University/College of Computer Science and Software Engineering</p>
+            <p>Incoming Master's Student</p>
+            <p>Shenzhen University,College of Computer Science and Software Engineering</p>
             <div class="contact-info">
                 <p>📧 <a href="mailto:your.email@example.com">yuquanlu01@gmail.com</a></p>
             </div>
@@ -143,7 +143,7 @@
     <!-- About section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>I am an incoming graduate student at Shenzhen University, where I will be conducting research on edge intelligence under the supervision of Professor Zhou Qihua. My research interests focus on LLM Serving and On-Device Machine Learning, exploring efficient ways to deploy and optimize large language models and machine learning algorithms on resource-constrained edge devices.</p>
+        <p>I am an incoming graduate student at Shenzhen University, where I will be conducting research on edge intelligence under the supervision of Professor QiHua Zhou. My research interests focus on LLM Serving and On-Device Machine Learning, exploring efficient ways to deploy and optimize large language models and machine learning algorithms on resource-constrained edge devices.</p>
         <p>During my undergraduate studies at Shanxi University, I developed a strong foundation in Computer Science with a particular emphasis on Data Mining and Machine Learning. This academic background has fostered my passion for deep learning technologies and their real-world applications.</p>
         <p>I look forward to contributing to the rapidly evolving field of edge intelligence and exploring innovative solutions that bridge the gap between powerful AI models and their deployment in everyday devices.</p>
     </section>
